--- a/itertools_presentation.ipynb
+++ b/itertools_presentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -246,8 +246,9 @@
        "[32, 9, 1000]"
       ]
      },
+     "execution_count": 262,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -263,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -272,8 +273,9 @@
        "[32, 9, 1000]"
       ]
      },
+     "execution_count": 263,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -289,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -298,8 +300,9 @@
        "[32, 9, 1000]"
       ]
      },
+     "execution_count": 264,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -317,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -326,8 +329,9 @@
        "<Axes: >"
       ]
      },
+     "execution_count": 265,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     },
     {
      "data": {
@@ -376,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +392,7 @@
        " ('Max', 'Verstappen', 'Red Bull (Boo)')]"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +421,7 @@
        " ('Nicholas', 'Latifi', None)]"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +450,7 @@
        " ('Max', 'Verstappen', 'Red Bull (Boo)')]"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +490,7 @@
        " ('Nicholas', 'Latifi', None)]"
       ]
      },
-     "execution_count": 259,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +518,7 @@
        " ('Seriously?', 'Latifi', 'Seriously?')]"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +546,7 @@
        " ('Nicholas', 'Latifi', 'Red Bull (Boo)')]"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +575,7 @@
        " ('Nicholas', 'Verstappen', 'Red Bull (Boo)')]"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,9 +592,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 273,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Lewis (GOAT)', 'Russell', 'Mercedes'),\n",
+       " ('George', 'Leclerc', 'Mercedes'),\n",
+       " ('Charles', 'Verstappen', 'Ferrari'),\n",
+       " ('Max', 'Latifi', 'Red Bull (Boo)'),\n",
+       " ('Nicholas', None, None)]"
+      ]
+     },
+     "execution_count": 273,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "driver_first_names = ['Lewis (GOAT)','George','Charles','Max','Nicholas']\n",
     "driver_last_names = ['Hamilton','Russell','Leclerc','Verstappen','Latifi']\n",
@@ -697,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +725,7 @@
        "[1, 2, 3, 4, 5, 6]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +746,7 @@
        "[1, 2, [3, 4], [[5], [6]]]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +767,7 @@
        "[1, 2, [3, 4], [[5], [6]]]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 276,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +788,7 @@
        "[1, 2, 3, 4, [5], [6]]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 277,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +877,7 @@
        "['abc', 'cab', 'cafe', 'face', 'goo']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 279,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,18 +888,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(['a', 'b', 'c'], <itertools._grouper at 0x7f731cf052e0>),\n",
-       " (['a', 'c', 'e', 'f'], <itertools._grouper at 0x7f731cf053a0>),\n",
-       " (['g', 'o', 'o'], <itertools._grouper at 0x7f731cf05af0>)]"
+       "[(['a', 'b', 'c'], <itertools._grouper at 0x7f731bf2a6d0>),\n",
+       " (['a', 'c', 'e', 'f'], <itertools._grouper at 0x7f731bf2a3d0>),\n",
+       " (['g', 'o', 'o'], <itertools._grouper at 0x7f731bf2a3a0>)]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 280,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -923,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1021,7 @@
        "[('A', 'B', 'C'), ('D', 'E', 'F')]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 283,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1041,7 @@
        "[('A', 'B', 'C'), ('D', 'E', 'F'), ('G', 'x', 'x')]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 284,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1061,7 @@
        "[[1, 2, 3], [4, 5, 6], [7, 8]]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 285,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1082,7 @@
        "[(1, 2, 3), (4, 5, 6), (7, 8, None)]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 286,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1093,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1144,7 @@
        " ('Aston Martin', 'Mercedes', 'Ferrari')]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 287,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1144,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1175,7 @@
        " ('Ferrari', 'Mercedes', 'Aston Martin')]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 288,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1181,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -1201,7 +1220,7 @@
        " ('C', '4')]"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1270,7 @@
        "[4, 8]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 290,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1304,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1332,7 @@
        "['FDR', 'Thomas Jefferson', 'James Madison', 'James Monroe']"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 292,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1324,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1355,7 @@
        " 'Warren G. Harding']"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 293,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1366,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
@@ -1482,7 +1501,7 @@
        "4          70    usa                ford torino  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 294,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1495,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [
     {
@@ -1533,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
@@ -1542,7 +1561,7 @@
        "[28.0, 32.5, 9.0, 3.1415, -1.0]"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 296,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1564,16 +1583,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[28, -1]"
+       "[28, 9, -1]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 297,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1623,7 +1642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [
     {
@@ -1632,7 +1651,7 @@
        "['Bah', 'Bah', None, None, 'Black Sheep', None, None, None, 'wool']"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 298,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1666,7 +1685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [
     {
@@ -1675,7 +1694,7 @@
        "['Bah', 'Bah', 'Black Sheep', 'wool']"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 299,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1741,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [
     {
@@ -1760,7 +1779,7 @@
        "             '0': 99959})"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 300,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1797,7 +1816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1825,7 @@
        "['1', '2', '3', '4', '5', '6']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 301,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1817,7 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [
     {
@@ -1826,7 +1845,7 @@
        "[0, 1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 302,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1846,7 +1865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [
     {
@@ -1855,7 +1874,7 @@
        "6"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 303,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1866,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
@@ -1875,7 +1894,7 @@
        "[0, 1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 304,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1902,7 +1921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [
     {
@@ -1932,7 +1951,7 @@
        " '3']"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 305,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1945,7 +1964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [
     {
@@ -1977,7 +1996,7 @@
        " False]"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 306,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1988,7 +2007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
@@ -1997,7 +2016,7 @@
        "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 307,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2008,7 +2027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
@@ -2040,7 +2059,7 @@
        " -1]"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 308,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2056,7 +2075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
@@ -2065,7 +2084,7 @@
        "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 309,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2095,7 +2114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
@@ -2104,7 +2123,7 @@
        "[['2', '1', '3'], ['3', '1', '3', '2'], ['3', '1', '2', '3', '1', '2']]"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 310,
      "metadata": {},
      "output_type": "execute_result"
     }
