--- a/itertools_exercises_w_answers.ipynb
+++ b/itertools_exercises_w_answers.ipynb
@@ -23,11 +23,36 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Formula 1 times\n",
+    "**Table of contents**<a id='toc0_'></a>    \n",
+    "- [Formula 1 times](#toc1_)    \n",
+    "  - [Construct a `.csv` reader.](#toc1_1_)    \n",
+    "  - [Sort drivers in ascending order by `Q3` time.](#toc1_2_)    \n",
+    "  - [Group drivers by the Team they for which they are driving.](#toc1_3_)    \n",
+    "  - [Calculate the average qualifying time by each car](#toc1_4_)    \n",
+    "- [Logistic map](#toc2_)    \n",
+    "  - [Construct a recurrence relation to map the logistic equation](#toc2_1_)    \n",
+    "  - [Use the logistic map to generate a set of data to plot](#toc2_2_)    \n",
+    "  - [Perform a mapping across the `r_val_range`.](#toc2_3_)    \n",
+    "  - [Visualize some slices from this diagram.](#toc2_4_)    \n",
+    "\n",
+    "<!-- vscode-jupyter-toc-config\n",
+    "\tnumbering=false\n",
+    "\tanchor=true\n",
+    "\tflat=false\n",
+    "\tminLevel=1\n",
+    "\tmaxLevel=6\n",
+    "\t/vscode-jupyter-toc-config -->\n",
+    "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <a id='toc1_'></a>[Formula 1 times](#toc0_)\n",
     "\n",
     "We have a list of Qualifying times from the Melbourne GP of 2023. The data is located in `f1_australia_2023_qualifying_times.csv`.\n",
     "\n",
@@ -37,11 +62,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Construct a `.csv` reader.\n",
+    "## <a id='toc1_1_'></a>[Construct a `.csv` reader.](#toc0_)\n",
     "\n",
     "We will refer to our previous presenter Roger's notes here! The goal would be to generate a `namedTuple` with the field names as `'Pos', 'Driver','Car','Q3'`\n",
     "\n",
@@ -166,11 +190,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sort drivers in ascending order by `Q3` time.\n",
+    "## <a id='toc1_2_'></a>[Sort drivers in ascending order by `Q3` time.](#toc0_)\n",
     "\n",
     "For this task, we need to access the `namedtuple` for each driver, specifically the field `Q3`. Note that there is also a lagging space in the string. \n",
     "\n",
@@ -347,11 +370,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Group drivers by the Team they for which they are driving.\n",
+    "## <a id='toc1_3_'></a>[Group drivers by the Team they for which they are driving.](#toc0_)\n",
     "\n",
     "Now, we will revise the key as `Driver.Car`.\n",
     "\n",
@@ -409,11 +431,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calculate the average qualifying time by each car\n",
+    "## <a id='toc1_4_'></a>[Calculate the average qualifying time by each car](#toc0_)\n",
     "\n",
     "For each car, there is likely at least two drivers. The average time of each driver needs to be calculated. we will use `statistics.mean` package for this. I already have the code ready for you.\n",
     "\n",
@@ -488,11 +509,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Logistic map\n",
+    "# <a id='toc2_'></a>[Logistic map](#toc0_)\n",
     "\n",
     "We are going to explore the interesting behavior of the logistic map, particularly, how a seemingly simple deterministic recursive mapping, can _very easily_ generate chaotic behavior. This is a ridiculously important topic on anything and everything from biology to dynamic systems (ok, fine, biology _is_ a dynamic system.) \n",
     "\n",
@@ -511,11 +531,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Construct a recurrence relation to map the logistic equation\n",
+    "## <a id='toc2_1_'></a>[Construct a recurrence relation to map the logistic equation](#toc0_)\n",
     "\n",
     "Recall from our previous discussion on how first and second order recurrence relations are mapped.\n",
     "\n",
@@ -553,11 +572,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Use the logistic map to generate a set of data to plot\n",
+    "## <a id='toc2_2_'></a>[Use the logistic map to generate a set of data to plot](#toc0_)\n",
     "\n",
     "- We will scan across a set of `r` values using the same initial start condition. I have already allocated some values for you."
    ]
@@ -584,11 +602,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Perform a mapping across the `r_val_range`.\n",
+    "## <a id='toc2_3_'></a>[Perform a mapping across the `r_val_range`.](#toc0_)\n",
     "\n",
     "Once you've iterated through each range, we will update each column with the data."
    ]
@@ -638,11 +655,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualize some slices from this diagram.\n",
+    "## <a id='toc2_4_'></a>[Visualize some slices from this diagram.](#toc0_)\n",
     "\n",
     "- You will need to use `more_itertools.locate` to identify the index that corresponds to each value in the `specific_r_vals`.\n",
     "- You can combine `more_itertools.locate` with `itertools.takewhile` for this task."
